# minigame-collection

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  windows-build.yml
docs/: release-notes-v1.0.0.md
packaging/windows/: README.md  launcher.py  minigame_collection.spec
scripts/: build_windows.ps1  generate_windows_icon.py  smoke_startup.py
src/minigame_collection/: __init__.py  __main__.py  app.py  config.py  metadata.py  registry.py  scene.py  scores.py
src/minigame_collection/games/: __init__.py
src/minigame_collection/games/blockfall/: __init__.py  logic.py  scene.py
src/minigame_collection/games/breakout/: __init__.py  logic.py  scene.py
src/minigame_collection/games/snake/: __init__.py  logic.py  scene.py
src/minigame_collection/games/starfighter/: __init__.py  logic.py  scene.py
src/minigame_collection/scenes/: __init__.py  menu.py
src/minigame_collection/ui/: __init__.py  text.py
tests/: test_blockfall_logic.py  test_blockfall_scene.py  test_breakout_logic.py  test_breakout_scene.py  test_menu_scene.py  test_registry.py  test_scores.py  test_snake_logic.py  test_snake_scene.py  test_starfighter_logic.py  test_starfighter_scene.py  test_ui_text.py
