[project]
name = "minigame-collection"
version = "0.1.0"
description = "A pygame-powered desktop minigame collection starting with Snake."
readme = "README.md"
authors = [
    { name = "SanttuA" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
minigame-collection = "minigame_collection.__main__:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100
